src/views/css/style.css
html, body {
  background: #FFFFFF;
  position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

body {
  font-family: "Avenir", "Tahoma", "Lucida Sans", "Lucida Grande", Verdana, Arial, sans-serif;
  color: #333;
  line-height: 1.5;
}

a {
  color: #263F6C;
}

a:visited {
  color: #112750;
}

h1, h2, h3, h4, h5, h6 {
  margin: 35px 0 25px;
  color: #444444;
}

h1.type-name {
  color: #47266E;
  margin: 20px 0 30px;
  background-color: #F8F8F8;
  padding: 10px 12px;
  border: 1px solid #EBEBEB;
  border-radius: 2px;
}

h2 {
  border-bottom: 1px solid #E6E6E6;
  padding-bottom: 5px;
}

body {
  display: flex;
}

.sidebar, .main-content {
  overflow: auto;
}

.sidebar {
  width: 30em;
  color: #F8F4FD;
  background-color: #2E1052;
  padding: 0 0 30px;
  box-shadow: inset -3px 0 4px rgba(0,0,0,.35);
  line-height: 1.2;
  z-index: 0;
}

.sidebar .search-box {
  padding: 13px 9px;
}

.sidebar input {
  display: block;
  box-sizing: border-box;
  margin: 0;
  padding: 5px;
  font: inherit;
  font-family: inherit;
  line-height: 1.2;
  width: 100%;
  border: 0;
  outline: 0;
  border-radius: 2px;
  box-shadow: 0px 3px 5px rgba(0,0,0,.25);
  transition: box-shadow .12s;
}

.sidebar input:focus {
  box-shadow: 0px 5px 6px rgba(0,0,0,.5);
}

.sidebar input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #757575;
  font-size: 14px;
  text-indent: 2px;
}

.sidebar input::-moz-placeholder { /* Firefox 19+ */
  color: #757575;
  font-size: 14px;
  text-indent: 2px;
}

.sidebar input:-ms-input-placeholder { /* IE 10+ */
  color: #757575;
  font-size: 14px;
  text-indent: 2px;
}

.sidebar input:-moz-placeholder { /* Firefox 18- */
  color: #757575;
  font-size: 14px;
  text-indent: 2px;
}

.project-summary {
  padding: 9px 15px 30px 30px;
}

.project-name {
  font-size: 1.4rem;
  margin: 0;
  color: #f4f4f4;
  font-weight: 600;
}

.project-version {
  margin-top: 5px;
  display: inline-block;
  position: relative;
}

.project-version > form::after {
  position: absolute;
  right: 0;
  top: 0;
  content: "\25BC";
  font-size: .6em;
  line-height: 1.2rem;
  z-index: -1;
}

.project-versions-nav {
  cursor: pointer;
  margin: 0;
  padding: 0 .9em 0 0;
  border: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}
.project-versions-nav:focus {
  outline: none;
}

.project-versions-nav > option {
  color: initial;
}

.sidebar ul {
  margin: 0;
  padding: 0;
  list-style: none outside;
}

.sidebar li {
  display: block;
  position: relative;
}

.types-list li.hide {
  display: none;
}

.sidebar a {
  text-decoration: none;
  color: inherit;
  transition: color .14s;
}
.types-list a {
  display: block;
  padding: 5px 15px 5px 30px;
}

.types-list {
  display: block;
}

.sidebar a:focus {
  outline: 1px solid #D1B7F1;
}

.types-list a {
  padding: 5px 15px 5px 30px;
}

.sidebar .current > a,
.sidebar a:hover {
  color: #866BA6;
}

.types-list li ul {
  overflow: hidden;
  height: 0;
  max-height: 0;
  transition: 1s ease-in-out;
}

.types-list li.parent {
  padding-left: 30px;
}

.types-list li.parent::before {
  box-sizing: border-box;
  content: "▼";
  display: block;
  width: 30px;
  height: 30px;
  position: absolute;
  top: 0;
  left: 0;
  text-align: center;
  color: white;
  font-size: 8px;
  line-height: 30px;
  transform: rotateZ(-90deg);
  cursor: pointer;
  transition: .2s linear;
}


.types-list li.parent > a {
  padding-left: 0;
}

.types-list li.parent.open::before {
  transform: rotateZ(0);
}

.types-list li.open > ul {
  height: auto;
  max-height: 1000em;
}

.main-content {
  padding: 0 30px 30px 30px;
  width: 100%;
}

.kind {
  font-size: 60%;
  color: #866BA6;
}

.superclass-hierarchy {
  margin: -15px 0 30px 0;
  padding: 0;
  list-style: none outside;
  font-size: 80%;
}

.superclass-hierarchy .superclass {
  display: inline-block;
  margin: 0 7px 0 0;
  padding: 0;
}

.superclass-hierarchy .superclass + .superclass::before {
  content: "<";
  margin-right: 7px;
}

.other-types-list li {
  display: inline-block;
}

.other-types-list,
.list-summary {
  margin: 0 0 30px 0;
  padding: 0;
  list-style: none outside;
}

.entry-const {
  font-family: Menlo, Monaco, Consolas, 'Courier New', Courier, monospace;
}

.entry-const code {
  white-space: pre-wrap;
}

.entry-summary {
  padding-bottom: 4px;
}

.superclass-hierarchy .superclass a,
.other-type a,
.entry-summary .signature {
  padding: 4px 8px;
  margin-bottom: 4px;
  display: inline-block;
  background-color: #f8f8f8;
  color: #47266E;
  border: 1px solid #f0f0f0;
  text-decoration: none;
  border-radius: 3px;
  font-family: Menlo, Monaco, Consolas, 'Courier New', Courier, monospace;
  transition: background .15s, border-color .15s;
}

.superclass-hierarchy .superclass a:hover,
.other-type a:hover,
.entry-summary .signature:hover {
  background: #D5CAE3;
  border-color: #624288;
}

.entry-summary .summary {
  padding-left: 32px;
}

.entry-summary .summary p {
  margin: 12px 0 16px;
}

.entry-summary a {
  text-decoration: none;
}

.entry-detail {
  padding: 30px 0;
}

.entry-detail .signature {
  position: relative;
  padding: 5px 15px;
  margin-bottom: 10px;
  display: block;
  border-radius: 5px;
  background-color: #f8f8f8;
  color: #47266E;
  border: 1px solid #f0f0f0;
  font-family: Menlo, Monaco, Consolas, 'Courier New', Courier, monospace;
  transition: .2s ease-in-out;
}

.entry-detail:target .signature {
  background-color: #D5CAE3;
  border: 1px solid #624288;
}

.entry-detail .signature .method-permalink {
  position: absolute;
  top: 0;
  left: -35px;
  padding: 5px 15px;
  text-decoration: none;
  font-weight: bold;
  color: #624288;
  opacity: .4;
  transition: opacity .2s;
}

.entry-detail .signature .method-permalink:hover {
  opacity: 1;
}

.entry-detail:target .signature .method-permalink {
  opacity: 1;
}
/* ... */

